fixed mobile horizontal scrolling

--- a/client/src/styles/games/main.less
+++ b/client/src/styles/games/main.less
@@ -404,7 +404,6 @@
         height: calc(100% - @navbar-height);
         background-color: #232323;
         overflow-y: auto;
-        overflow-x: hidden;
     }
 
     .sidenav {
