--- a/client/src/styles/main.less
+++ b/client/src/styles/main.less
@@ -13,10 +13,6 @@
 html, body, #root {
     background-color: #292929;
     overflow-x: hidden;
-
-    * {
-        font-family: @primary-font;
-    }
 }
 
 @import 'util/main';
